Worked with views,routes,animations,form validation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="content/css/styles.css" />
     <script src="app/lib/angularjs.min.js"></script>
     <script src="app/lib/angular-route.min.js"></script>
+    <script src="app/lib/angular-animate.min.js"></script>
     <script src="app/app.js"></script>
   </head>
 
